--- a/languages/modularity-like-sv_SE.po
+++ b/languages/modularity-like-sv_SE.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Modularity Like Posts 1.1.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/modularity-"
 "like\n"
-"POT-Creation-Date: 2023-06-16 13:43+0200\n"
-"PO-Revision-Date: 2023-06-16 13:44+0200\n"
+"POT-Creation-Date: 2023-11-27 12:14+0100\n"
+"PO-Revision-Date: 2023-11-27 12:15+0100\n"
 "Last-Translator: \n"
 "Language-Team: Svenska\n"
 "Language: sv_SE\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.3.1\n"
+"X-Generator: Poedit 3.4.1\n"
 "X-Domain: modularity-like\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;esc_html__\n"
@@ -104,7 +104,7 @@ msgstr "Länken har kopierats!"
 msgid "Something went wrong, link: "
 msgstr ""
 "Kunde inte kopiera länken automatiskt! Men du kan markera den, högerklicka "
-"och välja \"kopiera\" istället:"
+"och välja \"kopiera\" istället: "
 
 #: source/php/Module/LikedPosts.php:35
 msgid "Close"
@@ -121,6 +121,10 @@ msgstr "Listans namn"
 #: source/php/Module/LikedPosts.php:38
 msgid "List excerpt"
 msgstr "Listans ingress"
+
+#: source/php/Module/LikedPosts.php:39
+msgid "No liked posts were found"
+msgstr "Inga gillade inlägg hittades"
 
 #~ msgctxt "Admin page title"
 #~ msgid "Modularity Like"
